--- a/homework 01.html
+++ b/homework 01.html
@@ -4,11 +4,7 @@
 	<meta charset="UTF-8">
 	<title> Изучаем HTML </title>
 	<body>
-	<!-- Заверните в правильные <h> и <p> тэги текст.
-h1 главный заголовок, h2 - h3 подзаголовки, <p> - параграф:  -->
-
-
-
+	
 	<h1> 1.Главный заголовок </h1>
 		<p> Какой то параграф теста .... </p>
 		<p> Какой то параграф теста .... </p>
@@ -24,7 +20,7 @@ h1 главный заголовок, h2 - h3 подзаголовки, <p> - п
 		<p> Какой то параграф теста .... </p>
 		<p> Какой то параграф теста .... </p>
 
-	
+	<!-- Я не понял, что вы имели ввиду "чего-то не хватает" под четвертым заданием, поэтому просто решил добавить картинку -->
 	<img alt="supposed to be a pic of euros" src="images/hw1.jpg" align="center">
 	<h1>IT’S YOUR MONEY BUT YOU CAN’T HAVE IT: EU PROPOSES ACCOUNT FREEZES TO HALT BANK RUNS</h1>
 		<p>If there is a run on the bank, any bank in the EU, you better be among the first to get your money out.</p>
